--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/packages.config
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/packages.config
@@ -3,22 +3,32 @@
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.24" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.24" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.24" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.42" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.42" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.34" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.34" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.79" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.79" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.7" targetFramework="net462" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net462" />
-  <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2020.5.33" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net462" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.23" targetFramework="net462" />
+  <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2021.6.44" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="NuGet.Common" version="5.9.1" targetFramework="net462" />
+  <package id="NuGet.Configuration" version="5.9.1" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
+  <package id="NuGet.Frameworks" version="5.9.1" targetFramework="net462" />
+  <package id="NuGet.Packaging" version="5.9.1" targetFramework="net462" />
+  <package id="NuGet.Versioning" version="5.9.1" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net462" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Pkcs" version="5.0.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="XrmToolBoxPackage" version="1.2020.5.39" targetFramework="net462" />
+  <package id="XrmToolBoxPackage" version="1.2021.5.47" targetFramework="net462" />
 </packages>
