--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/packages.config
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/packages.config
@@ -1,34 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
-  <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
+  <package id="Azure.Core" version="1.36.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="DockPanelSuite" version="3.1.0" targetFramework="net462" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net462" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.34" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.51" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.34" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.79" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.79" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.51" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.44" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.1.44" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.57.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.0.3" targetFramework="net462" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Targets" version="5.0.0" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2151.40" targetFramework="net462" />
   <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2021.6.44" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net462" />
-  <package id="NuGet.Common" version="5.11.5" targetFramework="net462" />
-  <package id="NuGet.Configuration" version="5.9.1" targetFramework="net462" />
-  <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
-  <package id="NuGet.Frameworks" version="5.9.1" targetFramework="net462" />
-  <package id="NuGet.Packaging" version="5.9.1" targetFramework="net462" />
-  <package id="NuGet.Versioning" version="5.9.1" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2023.6.56" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="NuGet.Common" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="NuGet.Configuration" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="NuGet.Frameworks" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="NuGet.Packaging" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="NuGet.Protocol" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="NuGet.Versioning" version="6.8.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Memory.Data" version="8.0.0" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Pkcs" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="8.0.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="XrmToolBoxPackage" version="1.2021.5.47" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="XrmToolBoxPackage" version="1.2023.10.67" targetFramework="net462" />
 </packages>
